[gd_scene load_steps=2 format=3]

[ext_resource path="res://scripts/ui/hud_manager.gd" type="Script" id="1"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 1
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 16.0
offset_top = 16.0
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
offset_right = 240.0
offset_bottom = 320.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NextTurnButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Next Turn"

[node name="ToggleLogisticsButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Show Logistics"

[node name="WeatherPanel" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 28)

[node name="WeatherIcon" type="ColorRect" parent="MarginContainer/VBoxContainer/WeatherPanel"]
layout_mode = 2
custom_minimum_size = Vector2(24, 24)
size_flags_horizontal = 0
color = Color(0.800000, 0.800000, 0.800000, 1)

[node name="WeatherLabel" type="Label" parent="MarginContainer/VBoxContainer/WeatherPanel"]
layout_mode = 2
size_flags_horizontal = 3
text = "Weather : —"
autowrap_mode = 3

[node name="DoctrineSelector" type="OptionButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Doctrine"

[node name="DoctrineStatusLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Doctrine : —"
autowrap_mode = 3
tooltip_text = "Sélectionnez une doctrine pour voir l'inertie restante."

[node name="InertiaLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Inertie : 0 tour"
autowrap_mode = 3

[node name="OrderSelector" type="OptionButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ordres"

[node name="ExecuteOrderButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Exécuter l'ordre"

[node name="ElanLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Élan : 0.0 / 0.0 (↗ 0.0 | ↘ 0.0)"
tooltip_text = "Suivi du total d'Élan, du plafond et des décays."

[node name="FeedbackLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
autowrap_mode = 3
text = ""

[node name="FeedbackPlayer" type="AudioStreamPlayer" parent="."]
bus = &"Master"
